updates calc for main content container, subtract the correct width of the collapsed sidenav

--- a/apps/courses/src/app/app.component.scss
+++ b/apps/courses/src/app/app.component.scss
@@ -95,14 +95,14 @@ ul.student-name {
   @include breakpoint(mobile) {
     margin-top: 5rem;
     float: right;
-    width: calc(100% - 125px);
+    width: calc(100% - 107px);
   }
 
   @include breakpoint(tablet) {
     width: calc(100% - 244px);
 
     &.sidenav-collapsed {
-      width: calc(100% - 125px);
+      width: calc(100% - 107px);
     }
   }
 }
