--- a/apps/recent-activity/src/app/app.component.scss
+++ b/apps/recent-activity/src/app/app.component.scss
@@ -40,7 +40,7 @@
   @include breakpoint(mobile) {
     float: right;
     margin-top: 7.1rem;
-    width: calc(100% - 125px);
+    width: calc(100% - 107px);
   }
 
   @include breakpoint(tablet) {
@@ -49,7 +49,7 @@
     width: calc(100% - 244px);
     
     &.sidenav-collapsed {
-      width: calc(100% - 125px);
+      width: calc(100% - 107px);
     }
   }
 }
